first sprint of template and router fixed

--- a/ujob/src/index.html
+++ b/ujob/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../../assets/assets/css/slicknav.css">
   <link rel="stylesheet" href="../../assets/assets/css/flaticon.css">
   <link rel="stylesheet" href="../../assets/assets/css/animate.min.css">
